# otcg

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  nginx.conf
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/game/: area.rs  background.rs  coordinates.rs  deck.rs  hand.rs  mod.rs  pile.rs  player.rs  pointer.rs  view.rs  viewable.rs  visibility.rs
engine/src/storage/: board.rs  card.rs  chip.rs  mod.rs  rules.rs
game_server/: Cargo.toml
game_server/src/: action.rs  client.rs  lib.rs  messages.rs
lobby_server/: Cargo.toml
lobby_server/src/: client.rs  game_parameters.rs  library.rs  main.rs
lobby_server/src/game_mode/: lobby.rs  mod.rs  queue.rs
