[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.4", features = ['ws']}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
toml = "*"
tokio = "1.45.1"
rand = "0.10.2"
futures-util = "0.3.31"
log = "*"

# game_server = { path = "../game_server" }
