[package]
name = "lobby_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "otcg"
path = "src/main.rs"

[dependencies]

axum = { version = "*", features = ['ws'] }
game_server = { path = "../game_server" }
tokio = { version = "1.45.1", features = ['full'] }
serde_json = "*"
futures-util = "0.3.31"
tower-http = { version = "*", features = ["full"] }
log = { version = "*" }
engine = { path = "../engine" }
env_logger = { version = "*" }
rand = "0.10.2"
fibre = "*"
